Initialize the map and implement tests to verify map dimensions